--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
+    "sweetalert2": "^11.16.0",
     "url": "^0.11.4"
   },
   "devDependencies": {
