--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^8.0.1",
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
+    "mongoose-paginate-v2": "^1.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
