--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "axios": "^1.8.1",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "moment": "^2.30.1",
